# ZeroShotSucideDetection

./: .gitignore  README.md  alerting.py  app.py  client.py  detector.py  pyproject.toml  reciver.py  requirements.txt  sender.py
static/: camera.js  gallery.js  realtime.js  scan.js  style.css
templates/: camera.html  gallery.html  index.html  layout.html  login.html  realtime.html  scan.html
